# tatris-ml

./: .gitignore  .pre-commit-config.yaml  game_score.py  grid.py  main.py  pyproject.toml  scoring.py  shapes.py  tactris.py
logic/: animate_transition.py
modules/: AI.py  __init__.py  brain.py  console.py  game_score.py  grid.py  player.py  population.py  scoring.py  shapes.py  tactris.py  utils.py
tests/: test_all_ones.py  test_all_zeros.py  test_holes_amount.py
