[tool.poetry]
name = "tactris-ml"
version = "0.1.0"
description = "Reinforcement learning for tactris game"
authors = ["Vyazovetskov Vladimir <erhosen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
rich = "^12.2.0"
pyinstrument = "^4.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
